--- a/user-service/user-service-dev.yml
+++ b/user-service/user-service-dev.yml
@@ -14,7 +14,7 @@ spring:
     url: jdbc:mysql://localhost:3306/security_services_condonuity?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
     username: root
     password:
-    driver-class-name: com.mysql.jdbc.Driver
+#    driver-class-name: com.mysql.jdbc.Driver
 
 spring.jpa:
   hibernate:
