--- a/user-service/user-service-dev.yml
+++ b/user-service/user-service-dev.yml
@@ -6,13 +6,13 @@ eureka:
     serviceUrl:
       defaultZone: http://localhost:8761/eureka/
 
-spring:
-  datasource:
+#spring:
+#  datasource:
 #    url: jdbc:mysql://condonuitydev.mysql.database.azure.com:3306/condonuitydev?serverTimezone=UTC&useLegacyDatetimeCode=false
 #    username: condonuitydbuser@condonuitydev
 #    password: A#C<)}5gCnP8qQv
-    url: jdbc:mysql://localhost:3306/security_services_condonuity?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
-    username: root
+#    url: jdbc:mysql://localhost:3306/security_services_condonuity?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+#    username: root
 #    driver-class-name: com.mysql.jdbc.Driver
 
 spring.jpa:
