--- a/user-service/user-service-dev.yml
+++ b/user-service/user-service-dev.yml
@@ -11,10 +11,10 @@ spring:
 #    url: jdbc:mysql://condonuitydev.mysql.database.azure.com:3306/condonuitydev?serverTimezone=UTC&useLegacyDatetimeCode=false
 #    username: condonuitydbuser@condonuitydev
 #    password: A#C<)}5gCnP8qQv
-    url: jdbc:mysql://localhost:3306/security_services_condonuity?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+    url: jdbc:mysql://localhost:3306/condonuitydev?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
     username: root
-    password:
-    driver-class-name: com.mysql.jdbc.Driver
+    password: rootpass
+#    driver-class-name: com.mysql.jdbc.Driver
 
 spring.jpa:
   hibernate:
