--- a/client-service/client-service-dev.yml
+++ b/client-service/client-service-dev.yml
@@ -10,7 +10,7 @@ spring:
   datasource:
     url: jdbc:mysql://condonuitydev.mysql.database.azure.com:3306/condonuitydev?serverTimezone=UTC&useLegacyDatetimeCode=false
     username: condonuitydbuser@condonuitydev
-    password: A#C<)}5gCnP8qQv
+    password: 
 
 spring.jpa:
   hibernate:
