--- a/gateway-server/gateway-server-dev.yml
+++ b/gateway-server/gateway-server-dev.yml
@@ -20,7 +20,7 @@ zuul:
       sensitiveHeaders: Cookie,Set-Cookie
     client-service:
       path: /clients/**
-      serviceId: client-service
+      serviceId: security-service
       stripPrefix: true
     project-service:
       path: /projects/**
