--- a/gateway-server/gateway-server-dev.yml
+++ b/gateway-server/gateway-server-dev.yml
@@ -19,7 +19,7 @@ zuul:
       stripPrefix: false
       sensitiveHeaders: Cookie,Set-Cookie
     client-service:
-      path: /clients/**
+      path: /security/**
       serviceId: security-service
       stripPrefix: true
     project-service:
