--- a/gateway-server/gateway-server.yml
+++ b/gateway-server/gateway-server.yml
@@ -29,5 +29,7 @@ zuul:
       path: /projects/**
       serviceId: project-service
       stripPrefix: true
-
-
+    file-service:
+      path: /files/**
+      serviceId: file-service
+      stripPrefix: true
