--- a/gateway-server/gateway-server-dev.yml
+++ b/gateway-server/gateway-server-dev.yml
@@ -7,7 +7,9 @@ eureka:
       defaultZone: http://localhost:8761/eureka/
 
 ribbon:
-   ReadTimeout: 60000
+  ReadTimeout: 60000
+  eureka:
+    enabled: false
 
 zuul:
   ignoredServices: '*'
