Updated gateway-server.yml - Added IgnoredHeaders

--- a/gateway-server/gateway-server.yml
+++ b/gateway-server/gateway-server.yml
@@ -11,6 +11,7 @@ ribbon:
 
 zuul:
   ignoredServices: '*'
+  ignoredHeaders: Access-Control-Allow-Credentials, Access-Control-Allow-Origin
   routes:
     user-service:
       path: /users/**
