--- a/gateway-server/gateway-server.yml
+++ b/gateway-server/gateway-server.yml
@@ -11,7 +11,7 @@ ribbon:
 
 zuul:
   ignoredServices: '*'
-  ignoredHeaders: Access-Control-Allow-Credentials, Access-Control-Allow-Origin
+  ignored-headers: Access-Control-Allow-Credentials, Access-Control-Allow-Origin
   routes:
     user-service:
       path: /users/**
