--- a/file-service/file-service-stg.yml
+++ b/file-service/file-service-stg.yml
@@ -4,4 +4,4 @@ server:
 eureka:
   client:
     serviceUrl:
-      defaultZone: http://localhost:8761/eureka/
+      defaultZone: http://127.0.0.1:8761/eureka/
