--- a/security-service/security-service-dev.yml
+++ b/security-service/security-service-dev.yml
@@ -4,7 +4,7 @@ server:
 eureka:
   client:
     serviceUrl:
-      defaultZone: http://localhost:8761/eureka/
+      defaultZone: http://127.0.0.1:8761/eureka/
 
 spring:
   datasource:
@@ -25,5 +25,3 @@ spring.jpa:
     hibernate:
       dialect: org.hibernate.dialect.MySQL5InnoDBDialect
   show-sql: true
-
-
