--- a/security-service/security-service.yml
+++ b/security-service/security-service.yml
@@ -4,7 +4,7 @@ server:
 eureka:
   client:
     serviceUrl:
-      defaultZone: http://localhost:8761/eureka/
+      defaultZone: http://127.0.0.1:8761/eureka/
 
 spring:
   datasource:
@@ -21,5 +21,3 @@ spring.jpa:
   properties:
     hibernate:
       dialect: org.hibernate.dialect.MySQL5InnoDBDialect
-
-
