--- a/user-service/user-service-stg.yml
+++ b/user-service/user-service-stg.yml
@@ -4,7 +4,7 @@ server:
 eureka:
   client:
     serviceUrl:
-      defaultZone: http://localhost:8761/eureka/
+      defaultZone: http://127.0.0.1:8761/eureka/
 
 spring:
   datasource:
@@ -25,5 +25,3 @@ spring.jpa:
   properties:
     hibernate:
       dialect: org.hibernate.dialect.MySQL5InnoDBDialect
-
-
