--- a/security-service/security-service-dev.yml
+++ b/security-service/security-service-dev.yml
@@ -25,22 +25,26 @@ spring.jpa:
 
 spring.mail:
   host: smtp.gmail.com
-  port: 587
+  # port: 587
+  port: 465
   username: condonuitydev@gmail.com
   password: yixtxkshnfaykpsh
 
 # Other properties
   properties:
     mail:
+      debug: true
       smtp:
         auth: true
         connectiontimeout: 5000
         timeout: 5000
         writetimeout: 5000
 # TLS , port 587
-        starttls:
-          enable: true
+        # starttls:
+          # enable: true
 
 # SSL, post 465
-#spring.mail.properties.mail.smtp.socketFactory.port = 465
-#spring.mail.properties.mail.smtp.socketFactory.class = javax.net.ssl.SSLSocketFactory
+        ssl:
+          enable: true
+        socketFactory.port = 465
+        socketFactory.class = javax.net.ssl.SSLSocketFactory
