--- a/security-service/security-service-dev.yml
+++ b/security-service/security-service-dev.yml
@@ -23,31 +23,28 @@ spring.jpa:
       dialect: org.hibernate.dialect.MySQL5InnoDBDialect
   show-sql: true
 
-spring.mail:
-  host: smtp.gmail.com
-  # port: 587
-  port: 465
-  username: condonuitydev@gmail.com
-  password: yixtxkshnfaykpsh
+# spring.mail:
+#   host: smtp.gmail.com
+#   # port: 587
+#   port: 465
+#   username: condonuitydev@gmail.com
+#   password: yixtxkshnfaykpsh
 
-# Other properties
-  properties:
-    mail:
-      debug: true
-      smtp:
-        auth: true
-        connectiontimeout: 5000
-        timeout: 5000
-        writetimeout: 5000
-# TLS , port 587
-        # starttls:
-          # enable: true
+# # Other properties
+#   properties:
+#     mail:
+#       debug: true
+#       smtp:
+#         auth: true
+#         connectiontimeout: 5000
+#         timeout: 5000
+#         writetimeout: 5000
+# # TLS , port 587
+#         # starttls:
+#           # enable: true
 
-# SSL, post 465
-        ssl:
-          enable: true
-        socketFactory.port: 465
-        socketFactory.class: javax.net.ssl.SSLSocketFactory
-
-
-        
+# # SSL, post 465
+#         ssl:
+#           enable: true
+#         socketFactory.port: 465
+#         socketFactory.class: javax.net.ssl.SSLSocketFactory
