--- a/gateway-server/gateway-server-stg.yml
+++ b/gateway-server/gateway-server-stg.yml
@@ -36,3 +36,7 @@ zuul:
       path: /files/**
       serviceId: file-service
       stripPrefix: true
+    message-service:
+      path: /messages/**
+      serviceId: message-service
+      stripPrefix: true
