--- a/user-service/user-service-uat.yml
+++ b/user-service/user-service-uat.yml
@@ -18,6 +18,8 @@ spring:
 #    password:
 #    driver-class-name: com.mysql.jdbc.Driver
 
+baseUrl: 'http://condonuitytest.eastus.cloudapp.azure.com/'
+
 spring.jpa:
   hibernate:
     connection:
