Updated Production base URL

--- a/clients-service/clients-service-prod.yml
+++ b/clients-service/clients-service-prod.yml
@@ -22,6 +22,8 @@ spring:
 #    password:
 #    driver-class-name: com.mysql.jdbc.Driver
 
+baseUrl: 'https://app.condonuity.ca/'
+
 spring.jpa:
   hibernate:
     connection:
