--- a/user-service/user-service-uat.yml
+++ b/user-service/user-service-uat.yml
@@ -18,7 +18,7 @@ spring:
 #    password:
 #    driver-class-name: com.mysql.jdbc.Driver
 
-baseUrl: 'http://condonuitytest.eastus.cloudapp.azure.com/'
+baseUrl: 'https://uatapp.condonuity.ca/'
 
 spring.jpa:
   hibernate:
