--- a/clients-service/clients-service-uat.yml
+++ b/clients-service/clients-service-uat.yml
@@ -1,10 +1,10 @@
 server:
-  port: 9207
+  port: 8207
 
 eureka:
   client:
     serviceUrl:
-      defaultZone: http://127.0.0.1:9761/eureka/
+      defaultZone: http://127.0.0.1:8761/eureka/
 
 spring:
   datasource:
@@ -23,7 +23,7 @@ spring:
 #    password:
 #    driver-class-name: com.mysql.jdbc.Driver
 
-baseUrl: 'https://uatapp.condonuity.ca/'
+baseUrl: 'http://uatcondonuity.eastus.cloudapp.azure.com/'
 
 spring.jpa:
   hibernate:
